--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>HTML Forms</h2>
+<h2>Formulário HTML</h2>
 
 <form action="teste.html">
   <label for="fname">Primeiro nome:</label><br>
@@ -12,7 +12,7 @@
   <input type="submit" value="Confirmar">
 </form> 
 
-<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+<p>Se você clicar no botão "confirmar", você será levado para uma página chamada "teste.html".</p>
 
 </body>
 </html>
