--- a/teste.html
+++ b/teste.html
@@ -2,12 +2,13 @@
 <html>
 <body>
 
-<h2>The select Element</h2>
+<h2>O elemento selecionado:</h2>
 
-<p>The select element defines a drop-down list:</p>
+<p>
+O elemento select define uma lista suspensa:</p>
 
 <form action="segundo.html">
-  <label for="cars">Choose a car:</label>
+  <label for="cars">Escolha um carro:</label>
   <select id="cars" name="cars">
     <option value="volvo">Volvo</option>
     <option value="saab">Saab</option>
