--- a/teste.html
+++ b/teste.html
@@ -18,6 +18,8 @@ O elemento select define uma lista suspensa:</p>
   <input type="submit">
 </form>
 
+<p>Se você clicar em "enviar", você será levado para uma página chamada "segundo.html".</p>
+
 </body>
 </html>
 
