--- a/segundo.html
+++ b/segundo.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h2>The button Element</h2>
+<h2>O elemento do botão</h2>
 
-<button type="button" onclick="alert('Hello World!')">Click Me!</button>
+<button type="button" onclick="alert('Obrigado popr ter chegado até aqui!')">Clique em mim!</button>
 
 </body>
 </html>
