--- a/segundo.html
+++ b/segundo.html
@@ -4,7 +4,7 @@
 
 <h2>O elemento do botão</h2>
 
-<button type="button" onclick="alert('Obrigado popr ter chegado até aqui!')">Clique em mim!</button>
+<button type="button" onclick="alert('Obrigado por chegar até aqui!')">Clique em mim!</button>
 
 </body>
 </html>
